--- a/teams.html
+++ b/teams.html
@@ -188,6 +188,23 @@
               </div>
             </div>
           </div>
+         <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="assets/images/team/teja.jpg" alt="Profile picture of the footballer Ruben Dias" style="width:300px;height:300px;">
+                <p>Nuru Idi</p>
+              </div>
+              <div class="flip-card-back">
+                <h2>Nuru Idi</h2>
+                <p><img src="assets/images/football-player-attempting-to-kick-ball.png" alt="ball kick"> Appearances: 3</p>
+                <p><img src="assets/images/football-ball.png" alt="football"> Goals: 0</p>
+                <p><img src="assets/images/soccer-t-shirt.png" alt="football tshirt"> Assists: 0</p>
+                <p><img src="assets/images/football-sports-gloves.png" alt="keeper gloves"> Clean Sheets: 1</p>
+                <p><img src="assets/images/football-warning-card-in-a-referee-hand.png" alt="card in hand"> Yellow cards: 0</p>
+                <p><img src="assets/images/football-red-card-in-a-hand.png" alt="card in hand"> Red Cards: 0</p>
+              </div>
+            </div>
+          </div>
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
